2009-08-22  David Bateman  <dbateman@free.fr>

	* plot/__add_datasource__.m: Correct test for "datasource" argument
	* plot/__countour__.m: Add edgecolor properties and make it an alias
	for linecolor with the value "auto" being "flat" for the edgecolor.

2009-08-17  John W. Eaton  <jwe@octave.org>

	* help/print_usage.m: Make it work again if an argument is given.

2009-08-17  Jaroslav Hajek  <highegg@gmail.com>

	* help/print_usage: Allow calling from methods.

2009-08-11  Jaroslav Hajek  <highegg@gmail.com>

	* general/diff.m: Remove.
	* general/Makefile.in: Update.

2009-08-07  Jaroslav Hajek  <highegg@gmail.com>

	* general/flipdim.m: Fix omitted check.

2009-08-07  Jaroslav Hajek  <highegg@gmail.com>

	* general/flipdim.m: Simplify.

2009-08-07  Olli Saarela  <olli.saarela@gmail.com>

	* plot/__gnuplot_ginput__.m: If read fails to return data, sleep
	before trying again.

2009-08-06  John W. Eaton  <jwe@octave.org>

	* plot/compass.m, plot/feather.m: Simplify argument processing.

2009-08-06  John W. Eaton  <jwe@octave.org>

	* statistics/base/std.m: Correctly work along singleton dimension.
	From Christoph Ellenberger <C.Ellenberger@gmx.net>.

2009-08-06  Jaroslav Hajek  <highegg@gmail.com>

	* geometry/griddata.m: Optimize.

2009-08-06  Olaf Till  <olaf.till@uni-jena.de>

	* geometry/griddata.m: Linearize arrays.

2009-08-04  Pieter Eendebak  <pieter.eendebak@gmail.com> 

	* set/setxor.m: Added test for cell arrays of strings.

2009-08-05  Olli Saarela  <olli.saarela@gmail.com>

	* plot/__gnuplot_get_var__.m: If read fails to return data, sleep
	before trying again.

2009-08-04  Pieter Eendebak  <pieter.eendebak@gmail.com> 

	* set/setxor.m: Support cell arrays of strings.

2009-08-03  Jaroslav Hajek  <highegg@gmail.com>

	* general/sub2ind.m: Remove source.
	* general/ind2sub.m: Remove source.
	* general/Makefile.in: Update.

2009-08-02  Ben Abbott  <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Avoid the flickering x11 window seen with